Bug 59563 - Fix some strict PassOwnPtr issues in WebCore.
Summary: Fix some strict PassOwnPtr issues in WebCore.
Status: RESOLVED FIXED
Alias: None
Product: WebKit
Classification: Unclassified
Component: New Bugs (show other bugs)
Version: 528+ (Nightly build)
Hardware: Other OS X 10.5
: P2 Normal
Assignee: David Levin
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2011-04-26 17:01 PDT by David Levin
Modified: 2011-04-26 23:08 PDT (History)
1 user (show)

See Also:


Attachments
Patch (7.76 KB, patch)
2011-04-26 17:02 PDT, David Levin
no flags Details | Formatted Diff | Diff

Note You need to log in before you can comment on or make changes to this bug.
Description David Levin 2011-04-26 17:01:22 PDT
Fix some strict PassOwnPtr issues in WebCore.
Comment 1 David Levin 2011-04-26 17:02:33 PDT
Created attachment 91186 [details]
Patch
Comment 2 Eric Seidel (no email) 2011-04-26 17:13:58 PDT
Comment on attachment 91186 [details]
Patch

OK.
Comment 3 WebKit Commit Bot 2011-04-26 23:07:19 PDT
The commit-queue encountered the following flaky tests while processing attachment 91186 [details]:

http/tests/inspector/console-websocket-error.html bug 57392 (authors: pfeldman@chromium.org and yutak@chromium.org)
The commit-queue is continuing to process your patch.
Comment 4 WebKit Commit Bot 2011-04-26 23:08:43 PDT
Comment on attachment 91186 [details]
Patch

Clearing flags on attachment: 91186

Committed r85020: <http://trac.webkit.org/changeset/85020>
Comment 5 WebKit Commit Bot 2011-04-26 23:08:47 PDT
All reviewed patches have been landed.  Closing bug.